--- a/XFC/App.config
+++ b/XFC/App.config
@@ -3,9 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="XFC.Properties.Settings.Access_XFCConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Access_XFC.accdb"
-            providerName="System.Data.OleDb" />
+        <add name="XFC.Properties.Settings.Access_XFCConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Access_XFC.accdb" providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
