--- a/XFC/packages.config
+++ b/XFC/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
   <package id="CommunityToolkit.Mvvm" version="8.2.1" targetFramework="net472" />
+  <package id="log4net" version="2.0.15" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1586.0" targetFramework="net472" />
